[gd_scene load_steps=7 format=3 uid="uid://dsmm6h66s0rvn"]

[ext_resource type="Script" uid="uid://33pxsr7qk3s5" path="res://ships/pond/pond_explosion.gd" id="1_unyw8"]
[ext_resource type="Script" uid="uid://cuj2cdqgrpu2g" path="res://classes/attack.gd" id="2_wotiu"]
[ext_resource type="Texture2D" uid="uid://dro4na76ofbw3" path="res://unused_assets/projectiles/bullet7.png" id="3_xlp5h"]

[sub_resource type="Resource" id="Resource_j0uca"]
resource_local_to_scene = true
script = ExtResource("2_wotiu")
attack_damage = 10.0
knockback_force = 100.0
origin_name = "Pond"
attack_type = 2
metadata/_custom_type_script = "uid://cuj2cdqgrpu2g"

[sub_resource type="CircleShape2D" id="CircleShape2D_u6iya"]
radius = 60.0

[sub_resource type="Gradient" id="Gradient_w7cal"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.5)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1)

[node name="PondExplosion" type="Area2D" node_paths=PackedStringArray("collider", "particles") groups=["Player1", "Projectile"]]
collision_layer = 2
collision_mask = 13
script = ExtResource("1_unyw8")
collider = NodePath("CollisionShape2D")
particles = NodePath("CPUParticles2D")
attack = SubResource("Resource_j0uca")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_u6iya")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 50
texture = ExtResource("3_xlp5h")
lifetime = 0.5
one_shot = true
preprocess = 0.25
explosiveness = 0.8
emission_shape = 2
emission_sphere_radius = 45.0
particle_flag_align_y = true
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 50.0
damping_min = 50.0
damping_max = 100.0
color_ramp = SubResource("Gradient_w7cal")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="finished" from="CPUParticles2D" to="." method="_on_cpu_particles_2d_finished"]
